test/files/neg/t4568.check
t4568.scala:8: error: recursive method isSubListOf needs result type
        case h :: t => y.contains(h) && (t.isSubListOf(y.drop(y.indexOf(h) + 1)))
                                           ^
one error found
